--- a/public/stylesheets/sass/base/_typography.scss
+++ b/public/stylesheets/sass/base/_typography.scss
@@ -4,26 +4,30 @@
 }
 
 .paragraph {
-	font-size: 1.8rem;
-	font-weight: 100;
+    font-size: 1.8rem;
+    font-weight: 100;
 }
 
 .heading-1 {
     @extend %heading;
     font-size: 6.5rem;
     color: $color-grey-light-1;
-	line-height: 1;
+    line-height: 1;
 }
 
 .heading-2 {
     @extend %heading;
     font-size: 4rem;
-	line-height: 1;
-	font-weight: 100;
-	text-transform: uppercase;
+    line-height: 1;
+    font-weight: 100;
+    text-transform: uppercase;
 
-    &--light { color: $color-grey-light-1; }
-    &--dark { color: $color-grey-dark-1; }
+    &--light {
+        color: $color-grey-light-1;
+    }
+    &--dark {
+        color: $color-grey-dark-1;
+    }
 }
 
 .heading-3 {
@@ -37,8 +41,12 @@
     @extend %heading;
     font-size: 2.5rem;
 
-    &--light { color: $color-grey-light-1; }
-    &--dark { color: $color-grey-dark-1; }
+    &--light {
+        color: $color-grey-light-1;
+    }
+    &--dark {
+        color: $color-grey-dark-1;
+    }
 }
 
 .btn {
@@ -51,7 +59,7 @@
     text-transform: uppercase;
     padding: 1.8rem 3rem;
     cursor: pointer;
-    transition: all .2s;
+    transition: all 0.2s;
 
     &:hover {
         background-color: $color-primary-dark;
@@ -59,52 +67,54 @@
 }
 
 .btn-outline {
-	background-color: transparent;
-	border: 1px solid $color-primary;
-	color: $color-primary;
+    background-color: transparent;
+    border: 1px solid $color-primary;
+    color: $color-primary;
 
     &:hover {
-		background-color: $color-primary-dark;
-		color: #fff;
+        background-color: $color-primary-dark;
+        color: #fff;
     }
 }
 
-.link:link, .link:visited {
-	width: 15rem;
-	background-color: transparent;
-	color: $color-secondary;
-	font-family: $font-display;
-	text-transform: uppercase;
-	font-size: 1.5rem;
-	padding: 1.3rem 2rem;
-	border: 1px solid $color-grey-dark-2;
-	text-decoration: none;
-	text-align: center;
-	transition: .2s;
+.link:link,
+.link:visited {
+    width: 15rem;
+    background-color: transparent;
+    color: $color-secondary;
+    font-family: $font-display;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    padding: 1.3rem 2rem;
+    border: 1px solid $color-grey-dark-2;
+    text-decoration: none;
+    text-align: center;
+    transition: 0.2s;
 
-	@media only screen and (max-width: $bp-medium) {
-		font-size: 1rem;
-		padding: 1rem 1rem;
-		width: 10rem;
-	}
+    @media only screen and (max-width: $bp-medium) {
+        font-size: 1rem;
+        padding: 1rem 1rem;
+        width: 10rem;
+    }
 }
 
-.link:hover, .link:active {
-	background-color: $color-secondary;
-	color: $color-grey-light-1;
+.link:hover,
+.link:active {
+    background-color: $color-secondary;
+    color: $color-grey-light-1;
 }
 
 .underline {
-	line-height: .3rem;
-	background-color: #e67e22;
-	width: 7rem;
-	grid-column: 1 / -1;
-	grid-row: 2 / span 1;
+    line-height: 0.3rem;
+    background-color: #e67e22;
+    width: 7rem;
+    grid-column: 1 / -1;
+    grid-row: 2 / span 1;
 }
 
 .title {
-	grid-column: 1 / -1;
-	grid-row: 1 / span 1;
-	align-self: center;
-	text-align: center;
+    grid-column: 1 / -1;
+    grid-row: 1 / span 1;
+    align-self: center;
+    text-align: center;
 }
