--- a/public/stylesheets/sass/layout/_projects.scss
+++ b/public/stylesheets/sass/layout/_projects.scss
@@ -12,6 +12,7 @@
     grid-template-columns: repeat(3, 25vw);
     grid-template-rows: repeat(3, min-content) 35rem;
     grid-row-gap: 6rem;
+    grid-column-gap: 2rem;
     justify-content: center;
     justify-items: center;
 
