--- a/public/stylesheets/sass/layout/_services.scss
+++ b/public/stylesheets/sass/layout/_services.scss
@@ -1,66 +1,64 @@
 .services {
-	grid-column: full-start / full-end;
-	padding: 15rem 0;
+    grid-column: full-start / full-end;
+    padding: 15rem 0;
 
-	display: grid;
-	grid-template-columns: repeat(3, 25vw);
-	grid-template-rows: repeat(4, min-content);
-	// grid-row-gap: 6rem;
-	// grid-column-gap: 5rem;
-	grid-column-gap: 3rem;
-	grid-row-gap: 6rem;
-	justify-content: center;
-	justify-items: center;
+    display: grid;
+    grid-template-columns: repeat(3, 25vw);
+    grid-template-rows: repeat(4, min-content);
+    // grid-row-gap: 6rem;
+    // grid-column-gap: 5rem;
+    grid-column-gap: 3rem;
+    grid-row-gap: 6rem;
+    justify-content: center;
+    justify-items: center;
 
-	@media only screen and (max-width: $bp-medium) {
-		grid-template-columns: repeat(2, 35vw);
-	}
-	@media only screen and (max-width: $bp-smallest) {
-		grid-template-columns: repeat(2, 47vw);
-		grid-column-gap: 0rem;
-	}
+    @media only screen and (max-width: $bp-medium) {
+        grid-template-columns: repeat(2, 35vw);
+    }
+    @media only screen and (max-width: $bp-smallest) {
+        grid-template-columns: repeat(2, 47vw);
+        grid-column-gap: 0rem;
+    }
 
-	&__para {
-		grid-column: 1 / span 4;
-		font-size: 2rem;
-	}
+    &__para {
+        grid-column: 1 / span 4;
+        font-size: 2rem;
+    }
 
-	&__1 {
-		grid-column: 1 / span 1;
-	}
+    &__1 {
+        grid-column: 1 / span 1;
+    }
 
-	&__2 {
-		grid-column: 2 / span 1;
-	}
+    &__2 {
+        grid-column: 2 / span 1;
+    }
 
-	&__3 {
-		grid-column: 3 / span 1;
-	}
-
-
+    &__3 {
+        grid-column: 3 / span 1;
+    }
 }
 
 .service {
-	display: grid;
-	grid-row-gap: 1.8rem;
+    display: grid;
+    grid-row-gap: 1.8rem;
 
-	// box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
-	box-shadow: rgba(0, 0, 0, .137255) 0 1px 2px 0, rgba(0, 0, 0, .2) 0 3px 1px -2px, rgba(0, 0, 0, .117647) 0 1px 5px 0;
-	text-align: center;
-	padding: 3rem;
-	transition: all .2s;
+    // box-shadow: 0 1px 3px rgba(0,0,0,0.20), 0 0px 0px rgba(0,0,0,0.10);
+    box-shadow: rgba(0, 0, 0, 0.137255) 0 1px 2px 0,
+        rgba(0, 0, 0, 0.2) 0 3px 1px -2px, rgba(0, 0, 0, 0.117647) 0 1px 5px 0;
+    text-align: center;
+    padding: 3rem;
+    transition: all 0.2s;
 
-	i {
-		font-size: 5rem;
-		color: $color-primary;
-	}
+    i {
+        font-size: 5rem;
+        color: $color-primary;
+    }
 
-	&__paragraph {
-		font-size: 1.7rem;
-	}
+    &__paragraph {
+        font-size: 1.7rem;
+    }
 }
 
 // .service:hover {
 // 	box-shadow: -16px 96px 144px -35px rgba(158,242,235,1);
 // }
-
