--- a/public/stylesheets/sass/layout/_skills.scss
+++ b/public/stylesheets/sass/layout/_skills.scss
@@ -18,7 +18,7 @@
             grid-template-columns: repeat(2, 35vw);
         }
         @media only screen and (max-width: $bp-smallest) {
-            grid-template-columns: repeat(2, 47vw);
+            grid-template-columns: repeat(2, 41vw);
             grid-column-gap: 0rem;
         }
 
